# tgc

./: LICENSE  README.md  publish_on_test-pypi.sh
src/: README.md  pyproject.toml
src/tgc_floris_padt/: __main__ bck.py  __main__ hold.py  __main__ standby.py  __main__.py  __main_new__.py  config.py  ev.txt  ev_charge_profile copy.py  ev_charge_profile.py  test_TGC.py  test_charge_profile.py  test_clock.py  test_comm.py  test_func.py  test_mon.py  test_plotnine.py  test_standby.py  testp9.ipynb  tgc_main.py
src/tgc_floris_padt/tgcsim/: __main__ copy.py
src/tgc_floris_padt/tgcsim/models/: _generators.py  _order.py  ev.py  ev_charge_profile.py  ev_generator.py  generator.py  order.py  se.py  se_generator.py  tgc.py
src/tgc_floris_padt/tgcsim/network/: tgc_network.py
src/tgc_jads_2324/: __main__.py  config.py
src/tgc_jads_2324/algorithms/: olp_abstract_model.py
src/tgc_jads_2324/signals/tariffs/tariff_schedules/: energy_price.py
src/tgc_jads_2324/tgcsim/models/: distr_func_factory.py  ev.py  ev_generator.py  se.py  se_generator.py  tgc.py
