[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tgc_FLORIS_PADT"
#version = "0.0.1"
authors = [
    {name = "floris Padt", email = "floris@smart-r.net"},
]
description = "Tetris Game Charger - JADS 23/24"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["enexis", "jads"]
license = {text = "mit"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
#dependencies = [
#    "requests",
#    'importlib-metadata; python_version<"3.8"',
#]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Fpadt/tgc"
Issues = "https://github.com/Fpadt/tgc/issues"

[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/