[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tgc_jads_2324"
version = "0.0.3"
description = "Tetris Game Charger - JADS 23/24"
authors = [
    "Floris Padt <floris@smart-r.net>",
    "Alex Teeuwen",
    "Domique Fürst",
    "Henk Koster",
    "Anne-Marie Van Nes",
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
salabim = "24.0.1"
cplex = "22.1.1.0"
docplex = "2.25.236"
mosek = "10.1.21"
opencv-python = "4.8.1.78"
numpy = "^1.26.0"
pandas = "^2.1.3"
openpyxl = "3.1.2"         #maybe remove
greenlet = "3.0.1"
scipy = "1.11.4"
pyomo = "6.7.0"

[tool.poetry.dev-dependencies]
# development dependencies go here

# requires-python = ">=3.9"
# keywords = ["enexis", "jads"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# [tool.setuptools]
# install_requires = ["salabim==23.3.12"]
#dependencies = [
#    "requests",
#    'importlib-metadata; python_version<"3.8"',
#]
# dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Fpadt/tgc"
Issues = "https://github.com/Fpadt/tgc/issues"

[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
